Fixed resume button padding on small screens - updated TODO

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3060,7 +3060,7 @@
 			input[type="reset"],
 			input[type="button"],
 			.button {
-				padding: 0;
+				/*padding: 0;*/
 			}
 
 	}
